<resources>
    <string name="app_name">TGarden</string>
    <string name="slogan_name">We will help you take care of your garden!!</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="lenght_pass">Password must be longer than 6 characters</string>
    <string name="authentication_failed">Authentication failed!!!</string>

    <!--    Dashboard-->

    <string name="home">DISPLAY</string>
    <string name="setting">SETTINGS</string>
    <string name="data">DATA</string>
    <string name="account">ACCOUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <!--Thay đổi ngôn ngữ-->
    <string name="select_lang">Select Language</string>
    <string name="connect_wifi">Connect Wifi</string>
    <string name="create_account">Sign up</string>
    <string name="login">Sign in</string>
    <string name="signin">Sign up</string>

    <string name="confirm">Confirm</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="question_login">Do you have an account? Log in? </string>
    <string name="question_signup">Do not have an account? Sign up? </string>
    <string name="remember">Remember me</string>
    <string name="recover_pass">Forgot password? Password recovery</string>
    <string name="recover">Recover?</string>
    <string name="cancel">Cancel?</string>
    <string name="send_mail">Send mail: </string>
    <string name="err_login">Account or Password incorrect! Please login again</string>

<!--    Display-->

    <string name="light_int">Lights Intensity</string>
    <string name="temp">Temperature</string>
    <string name="air_humidity">Air Humidity</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="rain_sensor">Rain</string>
    <string name="have_rain">It is raining</string>
    <string name="no_rain">It is not raining</string>
    <string name="status_machine">Status Machine</string>
    <string name="dark">It is dark</string>
    <string name= "cloudy">It is cloudy </string>
    <string name= "sunny">It is sunny </string>
<!--    Setting fragment-->

    <string name="automation">Automation</string>

    <string name="fan_limit">Light On/Off Threshold:</string>
    <string name="fan_limitoff">Limit Fan Off</string>

    <string name="temp_greater">Temperature: </string>
    <string name="temp_smaller">Temperature smaller: </string>

    <string name="lamp_limit">Lamp On/Off Threshold</string>
    <string name="lamp_limitoff">Limit Lamp Off</string>

    <string name="lamp_smaller">Lights intensity: </string>
    <string name="lamp_greater">Lights intensity greater: </string>

    <string name="misting_limit">Misting On/Off Threshold:</string>
    <string name="misting_limitoff">Limit Misting Off</string>

    <string name="hum_smaller">Humidity: </string>
    <string name="hum_greater">Humidity greater: </string>

    <string name="pump_limit">Pump On/Off Threshold:</string>
    <string name="pump_limitoff">Limit Pump Off</string>

    <string name="soil_smaller">Soil Moisture: </string>
    <string name="soil_greater">Soil Moisture greater: </string>

    <string name="manual">Manual</string>
    <string name="device">Device</string>
    <string name="status">Status</string>
    <string name="parameter">Parameters</string>

    <string name="alarm">Alarm</string>
    <string name="pump_alarm">Pump</string>
    <string name="lamp_alarm">Lamp</string>
    <string name="fan_alarm">Fan</string>
    <string name="humidifier_alarm">Humidifier</string>

    <string name="time1">Time 1</string>
    <string name="time2">Time 2</string>











</resources>