<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/blue2"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_white_border"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TGarden"
            android:textAllCaps="true"
            android:textColor="@color/blue1"
            android:textSize="35dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/wifi_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/shape_blue_border"
            android:text="@string/connect_wifi"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/shape_blue_border"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/shape_blue_border"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/select_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/shape_blue_border"
            android:text="@string/select_lang"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:padding="20dp" />


</RelativeLayout>