<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".User.RegisterActivity"
    >

    <data>
        <variable
            name="onClickBack"
            type="android.view.View.OnClickListener" />

        <variable
            name="onClickRegister"
            type="android.view.View.OnClickListener" />

        <variable
            name="onClickHaveAccount"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        android:background="@color/blue1"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signup_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{onClickBack}"
                android:padding="20dp"
                android:src="@drawable/back_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_white_border"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/allerta"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="40dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/black"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_password"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/black"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@color/blue1"
                android:elevation="5dp"
                android:onClick="@{onClickRegister}"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:transitionName="signup_next_button" />

            <TextView
                android:id="@+id/have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{onClickHaveAccount}"
                android:text="@string/question_login"
                android:textColor="@color/purple_500"
                android:textSize="16sp" />

        </LinearLayout>



        </RelativeLayout>

</layout>