<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phone1"
    tools:context=".LocationOwner.RetailerMenuFragment">
    <!-- TODO: Update blank fragment layout -->

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_green"
                    android:gravity="center"
                    android:text="@string/light_int"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_green"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="25dp"
                    android:layout_height="15dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/blue">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/anhsang"
                            android:layout_width="140dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imagelight"
                            android:layout_width="140dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="25dp"
                    android:layout_height="15dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/blue">

                    <de.nitri.gauge.Gauge
                        android:id="@+id/gauge"
                        android:layout_width="140dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        gauge:maxValue="100"
                        gauge:minValue="0"
                        gauge:totalNicks="120"
                        gauge:valuePerNick="1" />
                    <TextView
                        android:id="@+id/textTemp"
                        android:layout_width="140dp"
                        android:layout_height="15dp"
                        android:gravity="center"
                        android:layout_marginTop="80dp"
                        android:textColor="@color/greenx"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <LinearLayout>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_greennhat"
                    android:gravity="center"
                    android:text="@string/air_humidity"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/shape_greennhat"
                    android:gravity="center"
                    android:text="@string/soil_moisture"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>


            <LinearLayout>

                <Space
                    android:layout_width="25dp"
                    android:layout_height="15dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_white_border2">

                    <az.plainpie.PieView
                        android:id="@+id/pieView_hum"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="25dp"
                    android:layout_height="15dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_white_border2">

                    <az.plainpie.PieView
                        android:id="@+id/pieView_soil"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center">

                    <Space
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/shape_greennhat"
                        android:gravity="center"
                        android:text="@string/rain_sensor"
                        android:textColor="@color/white"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout>

                <Space
                    android:layout_width="100dp"
                    android:layout_height="15dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_white_border2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/rain"
                            android:layout_width="160dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/image_rain"
                            android:layout_width="160dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_greennhat">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_greennhat"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_machine"
                        android:textColor="@color/white"
                        android:textSize="25dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TableLayout android:layout_marginTop="5dp">

                <TableRow>

                    <Space android:layout_width="10dp" />

                    <ImageView
                        android:id="@+id/light1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/light1_status"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp" />

                    <ImageView
                        android:id="@+id/fan"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/fan_status"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp" />
                </TableRow>


                <TableRow>
                    <Space
                        android:layout_height="30dp"/>
                </TableRow>

                <TableRow>

                    <Space android:layout_width="40dp"/>

                    <ImageView
                        android:id="@+id/pump1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/pump_status"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/hum"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="25dp"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/hum_status"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="15dp" />


                </TableRow>

                <TableRow>

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="200dp"/>
                </TableRow>

            </TableLayout>


        </TableLayout>

    </ScrollView>

<!--</ScrollView>-->